2014-01-20  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	PR other/58996
	* configure.ac: Added a check for pthread affinity support.
	* runtime/os-unix.c: Likewise.
	* configure: Regenerate.

2014-01-09  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	bootstrap/59094
	* Makefile.am (cilkincludedir): Fixed a bug to store version-specific
	runtime libraries in the correct place.
	* Makefile.in: Regenerate.

2013-12-13  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* Makefile.am (GENERAL_FLAGS): Removed undefining of Cilk keywords.
	* Makefile.in: Reconfigure.
	* runtime/symbol_test.c: Added a #define to clear out _Cilk_for.

2013-11-25  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (GCC_LIBSTDCXX_RAW_CXX_FLAGS): Remove.
	* configure: Regenerate.

2013-11-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (libcilkrts_cv_have_attribute_visibility): Check
	for __attribute__((visibility)).
	* configure: Regenerate.
	* include/cilk/common.h (CILK_EXPORT, CILK_EXPORT_DATA): Only use
	__attribute__((visibility)) if HAVE_ATTRIBUTE_VISIBILITY.

2013-11-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (AC_PROG_CXX): Move after AC_PROG_CC.
	* configure: Regenerate.

2013-11-12  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* Makefile.am (libcilkrts_la_LDFLAGS): Added a check for availability
	of "-ldl" flag.
	* configure.ac: Likewise.
	* configure: Regenerate
	* Makefile.in: Likewise.

2013-11-08  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	PR c/59039
	* runtime/cilk_fiber-unix.cpp: Fixed a crash in run() function
	when optimization is turned on.

2013-11-04  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	PR bootstrap/58951
	* Makefile.am (AM_LDFLAGS): Removed -ldl flag.
	* Makefile.in: Regenerate.

2013-11-04  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* runtime/os-unix.c [__sun__ && __svr4__]: Include <sched.h>.
	(__cilkrts_hardware_cpu_count) [__sun__ && __svr4__]: Use sysconf.
	(__cilkrts_yield) [__sun__ && __svr4__]: Use sched_yield.
